Last two steps